--- a/project-condor-landing/package.json
+++ b/project-condor-landing/package.json
@@ -65,7 +65,10 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.2.0"
+    "@capacitor/cli": "4.2.0",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   },
   "description": "An Ionic project"
 }
