--- a/project-condor-landing/package.json
+++ b/project-condor-landing/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://47tim.github.io",
+  "homepage": "http://47tim.github.io/47tim.github.io",
   "name": "project-condor-landing",
   "version": "0.0.1",
   "private": true,
